client-angular/docker/angular-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-app
          image: anand052021/client-angular-angular:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
